--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@ng-select/ng-select": "^13.4.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
