--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.1.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@ng-select/ng-select": "^13.4.1",
+    "@stripe/stripe-js": "^4.2.0",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
