--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@stripe/stripe-js": "^4.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
