--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "ngx-material-timepicker": "^13.1.1",
+    "ngx-owl-carousel-o": "^18.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
