--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "emailjs-com": "^3.2.0",
+    "feather-icons": "^4.29.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "ngx-material-timepicker": "^13.1.1",
     "rxjs": "~7.8.0",
+    "simplebar": "^6.2.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -42,6 +44,7 @@
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
+    "@types/feather-icons": "^4.29.4",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
