--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,9 @@
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/simplebar/dist/simplebar.min.css",
               "node_modules/swiper/swiper-bundle.min.css",
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/@angular/material/table/_table-flex-styles.scss",
+      "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
@@ -113,6 +115,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
+             
+      
             ],
             "scripts": []
           }
