--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^18.0.0",
     "@angular/animations": "^18.1.0",
     "@angular/cdk": "^18.2.2",
     "@angular/common": "^18.1.0",
@@ -34,6 +35,7 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "ng5-slider": "^1.2.6",
     "ngx-cookie-service": "^18.0.0",
     "ngx-material-timepicker": "^13.1.1",
     "ngx-owl-carousel-o": "^18.0.0",
