--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-slick-carousel": "^3.1.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "decimal.js": "^10.4.3",
     "emailjs-com": "^3.2.0",
     "feather-icons": "^4.29.2",
     "file-saver": "^2.0.5",
