--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/ssr": "^18.1.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@ng-select/ng-select": "^13.4.1",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@stripe/stripe-js": "^4.2.0",
     "angular-slick-carousel": "^3.1.7",
     "bootstrap": "^5.3.3",
